--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -12,16 +12,17 @@
     <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
         <div class="container">
-            <div class="navbar-header col-md-2 pull-left" id="navbar-header">
+            <div class="navbar-header col-md-1 pull-left" id="navbar-header">
                 <a class="navbar-brand" href="#" id="logo">NOM</a>
             </div>
             <div id="balises" class="container col-md-10">
                 <ul class="nav nav-pills" role="tablist">
-                    <li role="presentation" class="col-md-2" id="selectionBalise"><a href="#">Observations  </a></li>
+                    <li role="presentation" class="col-md-2" id="selectionBalise"><a href="{{ path('nao_main_observation') }}">Observations  </a></li>
                     <li role="presentation"  class="col-md-2"  ><a href="#">Oiseaux</a></li>
                     <li role="presentation" class="col-md-2" id="confirmationBalise" ><a href="#">A propos</a></li>
                     <li role="presentation" class="col-md-2" id="confirmationBalise" ><a href="#">Contact</a></li>
                     <li role="presentation" class="col-md-2" id="confirmationBalise" ><a href="#">Profil</a></li>
+
                 </ul>
             </div>
         </div>
