--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -13,7 +13,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
         <div class="container">
             <div class="navbar-header col-md-1 pull-left" id="navbar-header">
-                <a class="navbar-brand" href="#" id="logo">NOM</a>
+                <a class="navbar-brand" href="#" id="logo">
+                    {% if is_granted('ROLE_USER') %}
+                    {{ app.user.username }}
+                        {% else %}
+                            Non connecté
+                    {% endif %}</a>
             </div>
             <div id="balises" class="container col-md-10">
                 <ul class="nav nav-pills" role="tablist">
