--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,42 +1,94 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-        {% endblock %}
+<head>
+    <meta charset="UTF-8"/>
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ asset('bundles/app/css/base.css') }}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    {% endblock %}
 
-    </head>
-    <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
-        <div class="container">
-            <div class="navbar-header col-md-1 pull-left" id="navbar-header">
-                <a class="navbar-brand" href="#" id="logo">
-                    {% if is_granted('ROLE_USER') %}
-                    {{ app.user.username }}
+</head>
+
+
+<body>
+
+    {#-----------------
+    -------------------
+    ---HEADER NAVBAR---
+    -------------------
+    -------------------#}
+    <header class="header">
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">NAO</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Observation</a></li>
+                        <li><a href="#">Oiseaux</a></li>
+                        <li><a href="#">A propos</a></li>
+                        <li><a href="#">Contact</a></li>
+                        {% if is_granted('ROLE_USER') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Profil</a>
+                            </li>
+                        {% endif %}
+                        {% if is_granted('ROLE_USER') %}
+                            <li><a href="#">Déconnexion</a></li>
                         {% else %}
-                            Non connecté
-                    {% endif %}</a>
-            </div>
-            <div id="balises" class="container col-md-10">
-                <ul class="nav nav-pills" role="tablist">
-                    <li role="presentation" class="col-md-2" id="selectionBalise"><a href="#">Observations  </a></li>
-                    <li role="presentation"  class="col-md-2"  ><a href="#">Oiseaux</a></li>
-                    <li role="presentation" class="col-md-2" id="confirmationBalise" ><a href="#">A propos</a></li>
-                    <li role="presentation" class="col-md-2" id="confirmationBalise" ><a href="#">Contact</a></li>
-                    <li role="presentation" class="col-md-2" id="confirmationBalise" ><a href="#">Profil</a></li>
+                            <li><a href="#">Connexion</a></li>
+                        {% endif %}
 
-                </ul>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
+
+
+    {#-----------------
+   --------------------
+   --CONTENU PRINCIPAL-
+   --------------------
+   -------------------#}
+    <div class="main-content">
+        {% for msg in app.session.flashBag.get('success') %}
+            <div class="alert alert-success">
+                {{ msg }}
+            </div>
+        {% endfor %}
         {% block body %}
         {% endblock %}
-        {% block javascripts %}
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        {% endblock %}
-    </body>
+    </div>
+
+
+    {#----------------
+    ------------------
+    -----FOOTER-------
+    ------------------
+    ------------------#}
+    <div class="footer">
+        <p class="footer-text">Fabriqué avec <span class="heart"><3</span> <a href="#">par CatBot Production</a></p>
+    </div>
+
+{% block javascripts %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{{ asset('bundles/app/js/main.js') }}"></script>
+{% endblock %}
+</body>
 </html>
