--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,41 +1,33 @@
-{% extends "layout.html.twig" %}
+{% extends "base.html.twig" %}
 
 
 {% block title %}Connexion{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('bundles/naomain/css/login.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/login.css') }}">
 {% endblock %}
 
 
 
-{% block body %}
 
+{% block body %}
     <div class="container" id="form">
         <div class="row">
             <div class="col-xs-12">
                 <h1>Connexion!</h1>
                 {% if error %}
-                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    <div class="alert alert-danger">
+                        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    </div>
+
                 {% endif %}
-                <form action="{{ path('login') }}" method="post">
-                    <label for="username">Pseudo:</label>
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" />
-                    <label for="password">Mot de pass:</label>
-                    <input type="password" id="password" name="_password" />
-                    {#
-                        If you want to control the URL the user
-                        is redirected to on success (more details below)
-                        <input type="hidden" name="_target_path" value="/account" />
-                    #}
-                    <button type="submit">login</button>
-                </form>
+                {{ form_start(form) }}
+                    {{ form_row(form._username) }}
+                    {{ form_row(form._password) }}
+
+                    <button type="submit" class="btn btn-success">Connexion <span class="fa fa-lock"></span></button>
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
-
-
 {% endblock %}
-
-
-{% block javascripts %}{% endblock %}
