Formulaire de login: Etat: 80% termine

--- a/app/Resources/views/Main/home.html.twig
+++ b/app/Resources/views/Main/home.html.twig
@@ -12,7 +12,7 @@
 
     <div class="well" id="contain">
         <h1>PAGE D'ACCUEIL</h1>
-        <p><a href="{{ path('login') }}">Connexion</a></p>
+        <p><a href="{{ path('security_login') }}">Connexion</a></p>
         <p><a href="#">Inscription</a></p>
     </div>
 
