--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,9 +48,9 @@
                             </li>
                         {% endif %}
                         {% if is_granted('ROLE_USER') %}
-                            <li><a href="#">Déconnexion</a></li>
+                            <li><a href="{{ path('security_logout') }}">Déconnexion</a></li>
                         {% else %}
-                            <li><a href="#">Connexion</a></li>
+                            <li><a href="{{ path('security_login') }}">Connexion</a></li>
                         {% endif %}
 
                     </ul>
