OK athentification. Pb ObservationAction doesn't recognize USER

--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -11,6 +11,7 @@
 
 
 {% block body %}
+
     <div class="container" id="form">
         <div class="row">
             <div class="col-xs-12">
@@ -19,11 +20,16 @@
                     <div class="alert alert-danger">
                         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                     </div>
-
                 {% endif %}
+                {% for flashMessage in app.session.flashbag.get('needLogin') %}
+                    <div class="alert alert-danger">
+                        <div>{{ flashMessage }}</div>
+                    </div>
+                {% endfor %}
                 {{ form_start(form) }}
                     {{ form_row(form._username) }}
                     {{ form_row(form._password) }}
+                    {{ form_row(form._roles) }}
 
                     <button type="submit" class="btn btn-success">Connexion <span class="fa fa-lock"></span></button>
                 {{ form_end(form) }}
