--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,13 +32,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">NAO</a>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">NAO</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Observation</a></li>
+                        <li class="active"><a href="{{ path('observation') }}">Observation</a></li>
                         <li><a href="#">Oiseaux</a></li>
                         <li><a href="#">A propos</a></li>
                         <li><a href="#">Contact</a></li>
