Création de la partie validation d'inscription

--- a/app/Resources/views/main/home.html.twig
+++ b/app/Resources/views/main/home.html.twig
@@ -13,7 +13,7 @@
     <div class="well" id="contain">
         <h1>PAGE D'ACCUEIL</h1>
         <p><a href="{{ path('security_login') }}">Connexion</a></p>
-        <p><a href="#">Inscription</a></p>
+        <p><a href="{{ path('user_register') }}">Inscription</a></p>
     </div>
 
 {% endblock %}
