--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
     <div class="well" id="contain">
         <h1>Observation</h1>
-        <p><a href="#}">Ajouter une observation</a></p>
+        <p><a href="#">Ajouter une observation</a></p>
     </div>
 
 
