--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,6 +38,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
+                        <li class="active"><a href="{{ path('homepage') }}">Accueil</a></li>
                         <li class="active"><a href="{{ path('observation') }}">Observation</a></li>
                         <li><a href="#">Oiseaux</a></li>
                         <li><a href="#">A propos</a></li>
