--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -7,16 +7,22 @@
             <div class="col-xs-12">
                 <h1>Inscription</h1>
 
+                {% for message in app.flashes('notice') %}
+                    <div class="alert alert-info">
+                        <div>{{ message }}</div>
+                    </div>
+                {% endfor %}
+
                 {{ form_start(form) }}
                     {{ form_row(form.username,{
                        'label' : 'Pseudo'
                     }) }}
                     {{ form_row(form.email) }}
                     {{ form_row(form.plainPassword.first, {
-                        'label' : 'Mot de pass'
+                        'label' : 'Mot de passe'
                     }) }}
                     {{ form_row(form.plainPassword.second, {
-                        'label' : 'Confirmez votre mot de pass'
+                        'label' : 'Confirmez votre mot de passe'
                     }) }}
 
                     <button type="submit" class="btn btn-primary" formnovalidate>Inscription</button>
