--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
-    <meta charset="UTF-8"/>
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{% block title %}Bienvenue!{% endblock %}</title>
     {% block stylesheets %}
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+              integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+              crossorigin="anonymous">
         <link rel="stylesheet" href="{{ asset('bundles/app/css/base.css') }}">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     {% endblock %}
 
 </head>
@@ -15,81 +17,132 @@
 
 <body>
 
-    {#-----------------
-    -------------------
-    ---HEADER NAVBAR---
-    -------------------
-    -------------------#}
-    <header class="header">
+{#-----------------
+-------------------
+---HEADER NAVBAR---
+-------------------
+-------------------#}
+<header class="cover text-center">
+    <nav class="navbar navbar-toggleable-sm">
+        <div class="container">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                    data-target="#navbarToggler-1" aria-controls="navbarToggler-1" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="{{ path('homepage') }}">NAO</a>
+            <div class="collapse navbar-collapse pull-xs-right justify-content-end" id="navbarToggler-1">
+                <ul class="navbar-nav mt-2 mt-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('homepage') }}">ACCUEIL <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('observation') }}">OBSERVATIONS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">OISEAUX</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ACTUALITÉS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">A PROPOS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                    {% if is_granted('ROLE_USER') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">PROFIL</a>
+                        </li>
+                    {% endif %}
+                    {% if is_granted('ROLE_USER') %}
+                        <a href="{{ path('security_logout') }}">DÉCONNEXION</a>
+                    {% else %}
+                        <a class="btn btn-outline-white btn-outline" href="{{ path('security_login') }}"><i
+                                    class="fa fa-user"></i> CONNEXION
+                        </a>
+                        <a class="btn btn-outline-white btn-outline" href="{{ path('user_register') }}"><i
+                                    class="fa fa-user"></i> INSCRITPION
+                        </a>
 
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{{ path('homepage') }}">NAO</a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="{{ path('homepage') }}">Accueil</a></li>
-                        <li class="active"><a href="{{ path('observation') }}">Observation</a></li>
-                        <li><a href="#">Oiseaux</a></li>
-                        <li><a href="#">A propos</a></li>
-                        <li><a href="#">Contact</a></li>
-                        {% if is_granted('ROLE_USER') %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Profil</a>
-                            </li>
-                        {% endif %}
-                        {% if is_granted('ROLE_USER') %}
-                            <li><a href="{{ path('security_logout') }}">Déconnexion</a></li>
-                        {% else %}
-                            <li><a href="{{ path('security_login') }}">Connexion</a></li>
-                        {% endif %}
-
-                    </ul>
-                </div>
+                    {% endif %}
+                    <li class="nav-item">
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
 
-    {#-----------------
-   --------------------
-   --CONTENU PRINCIPAL-
-   --------------------
-   -------------------#}
-    <div class="main-content">
-        {% for msg in app.session.flashBag.get('success') %}
-            <div class="alert alert-success">
-                {{ msg }}
+{#-----------------
+--------------------
+--CONTENU PRINCIPAL-
+--------------------
+-------------------#}
+<div class="main-content">
+    {% block body %}
+    {% endblock %}
+</div>
+
+
+{#----------------
+------------------
+-----FOOTER-------
+------------------
+------------------#}
+<div class="footer">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="input-group">
+                <h2>SOUSCRIRE</h2>
+                <br/>
+                <p>à notre newsletter</p>
+                <input type="text" class="form-control" placeholder="mon@adresse.com" aria-label="souscription">
+                <span class="input-group-btn">
+                <button class="btn btn-secondary" type="button">Ok!</button>
+                </span>
             </div>
-        {% endfor %}
-        {% block body %}
-        {% endblock %}
+        </div>
+
+    </div>
+    <div class="card text-center" id="footer">
+        <div class="card-body">
+            <h4 class="card-title">LOGO</h4>
+            <p class="card-text">Réseaux soiciaux</p>
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">A propos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Copyright</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Mentions légales</a>
+                </li>
+            </ul>
+        </div>
     </div>
 
-
-    {#----------------
-    ------------------
-    -----FOOTER-------
-    ------------------
-    ------------------#}
-    <div class="footer">
-        <p class="footer-text">Fabriqué avec <span class="heart"><3</span> <a href="#">par CatBot Production</a></p>
-    </div>
+</div>
 
 {% block javascripts %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="{{ asset('bundles/app/js/main.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+            integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+            crossorigin="anonymous"></script>
 {% endblock %}
 </body>
 </html>
