--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -27,8 +27,8 @@
                     </div>
                 {% endfor %}
                 {{ form_start(form) }}
-                    {{ form_row(form._username) }}
-                    {{ form_row(form._password) }}
+                    {{ form_row(form._username, {'label' : 'Pseudo'}) }}
+                    {{ form_row(form._password, {'label' : 'Mot de passe'}) }}
 
                     <button type="submit" class="btn btn-success">Connexion <span class="fa fa-lock"></span></button>
                     &nbsp;
