--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -2,7 +2,7 @@ body
 {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
-    background-color: #ffffff;
+    background-color: #fffef9;
     color: #46484a;
 }
 
