--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,14 +2,13 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/base.css') }}">
     <title>{% block title %}Bienvenue!{% endblock %}</title>
     {% block stylesheets %}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-              integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-              crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ asset('bundles/app/css/base.css') }}">
     {% endblock %}
 
 </head>
@@ -22,19 +21,13 @@
 ---HEADER NAVBAR---
 -------------------
 -------------------#}
-<header class="cover text-center">
-    <nav class="navbar navbar-toggleable-sm">
+   <div class="container-fluide">
+    <nav class="navbar navbar-expand-sm navbar-light bg-transparent">
         <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarToggler-1" aria-controls="navbarToggler-1" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <a class="navbar-brand" href="{{ path('homepage') }}">NAO</a>
-            <div class="collapse navbar-collapse pull-xs-right justify-content-end" id="navbarToggler-1">
-                <ul class="navbar-nav mt-2 mt-md-0">
+                <ul class="navbar-nav mt-sm-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('homepage') }}">ACCUEIL <span class="sr-only"></span></a>
+                        <a class="nav-link" href="{{ path('homepage') }}">ACCUEIL</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('observation') }}">OBSERVATIONS</a>
@@ -57,25 +50,26 @@
                         </li>
                     {% endif %}
                     {% if is_granted('ROLE_USER') %}
-                    <a href="{{ path('security_logout') }}">
-                        <a class="btn  btn-outline" href="{{ path('security_logout') }}"><i
-                                    class="fa fa-user"></i>DÉCONNEXION</a>
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-outline" href="{{ path('security_logout') }}">DÉCONNEXION</a>
+                        </li>
+
                         {% else %}
-                            <a class="btn  btn-outline" href="{{ path('security_login') }}"><i
-                                        class="fa fa-user"></i> CONNEXION
-                            </a>
-                            <a class="btn  btn-outline" href="{{ path('user_register') }}"><i
-                                        class="fa fa-user"></i> INSCRITPION
-                            </a>
+                            <li class="nav-item">
+                                <a class="btn btn-outline" href="{{ path('security_login') }}"> CONNEXION
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn  btn-outline" href="{{ path('user_register') }}"> INSCRITPION
+                                </a>
+                            </li>
 
                         {% endif %}
                         <li class="nav-item">
                         </li>
                 </ul>
-            </div>
         </div>
     </nav>
-</header>
 
 
 {#-----------------
@@ -83,10 +77,10 @@
 --CONTENU PRINCIPAL-
 --------------------
 -------------------#}
-<div class="main-content">
-    {% block body %}
-    {% endblock %}
-</div>
+    <div class="main-content">
+        {% block body %}
+        {% endblock %}
+    </div>
 
 
 {#----------------
