MAJ Profil Etat: en cours

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -98,11 +98,13 @@
                     <p>à notre newsletter</p>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" placeholder="mon@adresse.com" aria-label="souscription">
-                    <span class="input-group-btn">
-                    <button class="btn btn-secondary" type="button">Ok!</button>
-                </span>
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Email address">
+                        <span class="input-group-addon"><a href="#">Inscription</a></span>
+                    </div>
+                    <p class="text-muted">Votre email ne sera pas partagé</p>
                 </div>
+
             </div>
         </div>
 
