--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#">OISEAUX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ACTUALITÉS</a>
+                        <a class="nav-link" href="{{ path('actualite') }}">ACTUALITÉS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">A PROPOS</a>
