--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -9,6 +9,22 @@
             <h1 class="text-center pt-5 text-white">ACTUALITÉS</h1>
 </div>
 
+<div class="container bg-success" style="width: 80%">
+   <div class="d-flex flex-row justify-content-between row-h1">
+       <div class="card">
+           <card-title>TITRE</card-title>
+           <card-body>Lorem ipsum dolor sit amet, consectetur.</card-body>
+       </div>
+       <div class="card">
+           <card-title>TITRE</card-title>
+           <card-body>Lorem ipsum dolor sit amet, consectetur.</card-body>
+       </div>
+       <div class="card">
+           <card-title>TITRE</card-title>
+           <card-body>Lorem ipsum dolor sit amet, consectetur.</card-body>
+       </div>
+   </div>
 
+</div>
 
 {% endblock %}
