--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,7 +60,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn  btn-outline" href="{{ path('user_register') }}"> INSCRITPION
+                                <a class="btn  btn-outline" href="{{ path('user_register') }}"> INSCRIPTION
                                 </a>
                             </li>
 
