--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -9,20 +9,17 @@
             <h1 class="text-center pt-5 text-white">ACTUALITÉS</h1>
 </div>
 
-<div class="container bg-success" style="width: 80%">
-   <div class="d-flex flex-row justify-content-between row-h1">
-       <div class="card">
-           <card-title>TITRE</card-title>
-           <card-body>Lorem ipsum dolor sit amet, consectetur.</card-body>
+<div class="container">
+   <div class="d-flex flex-wrap justify-content-between row-h1">
+       {% for article in articles %}
+       <div class="card p-2 m-2 item-h1" style="width: 20rem">
+           <img src="{{ asset('bundles/app/img/'~ article.articleImage) }}" alt="image_article" class="card-img-top" style="width: 200px">
+           <div class="card-title p4"><h1>{{ article.title }}</h1></div>
+           <div class="card-body p4">{{ article.content }}</div>
+           <div class="card-footer p4"><a href="#"><button class="btn btn-success">Lire la suite</button></a></div>
        </div>
-       <div class="card">
-           <card-title>TITRE</card-title>
-           <card-body>Lorem ipsum dolor sit amet, consectetur.</card-body>
-       </div>
-       <div class="card">
-           <card-title>TITRE</card-title>
-           <card-body>Lorem ipsum dolor sit amet, consectetur.</card-body>
-       </div>
+       {% endfor %}
+               
    </div>
 
 </div>
