Travail du reset password

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
                     </li>
                     {% if is_granted('ROLE_USER') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('profil') }}">PROFIL</a>
+                            <a class="nav-link" href="{{ path('profile') }}">PROFIL</a>
                         </li>
                     {% endif %}
                     {% if is_granted('ROLE_USER') %}
