--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -100,28 +100,31 @@
                         </div>
 
                         <div class="col">
-                            <form action="{{ path('changeMail') }}" method="POST">
-                                <div class="form-group">
-                                    <label for="password">Mot de passe</label>
-                                    <input type="password" name="oldPassword" class="form-control">
-                                    <label for="newEmail">Nouvel email</label>
-                                    <input type="text" name="newEmail" class="form-control">
-                                    <label for="repeatEmail">Répétez nouveau mot de passe</label>
-                                    <input type="text" name="repeatEmail" class="form-control">
-                                    <button type="submit" class="btn btn-danger">Changer de mot de passe</button>
-                                </div>
-                            </form>
-                            <form action="{{ path('change') }}" method="POST">
-                                <div class="form-group">
-                                    <label for="oldPassword">Ancien mot de passe</label>
-                                    <input type="password" name="oldPassword" class="form-control">
-                                    <label for="newPassword">Nouveau mot de passe</label>
-                                    <input type="password" name="newPassword" class="form-control">
-                                    <label for="repeatNewPassword">Répétez nouveau mot de passe</label>
-                                    <input type="password" name="repeatNewPassword" class="form-control">
-                                    <button type="submit" class="btn btn-danger">Changer de mot de passe</button>
-                                </div>
-                            </form>
+                                    {{ form_start(formChangeEmail) }}
+                                    {{ form_row(formChangeEmail._password,{
+                                        'label' : 'Mot de passe'
+                                    }) }}
+                                    {{ form_row(formChangeEmail.email, {
+                                        'label' : 'Nouvel email'
+                                    }) }}
+                                    <button type="submit" class="btn btn-primary" formnovalidate>Changer d'email</button>
+                                    {{ form_end(formChangeEmail) }}
+
+                        </div>
+                        <div class="col">
+                            {{ form_start(formChangePassword) }}
+                            {{ form_row(formChangePassword._password,{
+                                'label' : 'Mot de passe'
+                            }) }}
+                            {{ form_row(formChangePassword.plainPassword.first, {
+                                'label' : 'Nouveau mot de passe'
+                            }) }}
+                            {{ form_row(formChangePassword.plainPassword.second, {
+                                'label' : 'Confirmez votre mot de passe'
+                            }) }}
+                            <button type="submit" class="btn btn-primary" formnovalidate>Changer de mot de passe</button>
+                            {{ form_end(formChangePassword) }}
+
                         </div>
                     </div>
                 </div>
